[gd_scene load_steps=4 format=3 uid="uid://d1j3yshuoxoum"]

[ext_resource type="Theme" uid="uid://cqmj2grm1jybk" path="res://assets/themes/retro_theme.tres" id="1_3noj5"]
[ext_resource type="Script" path="res://scenes/ui/DeckSelectionScreen.gd" id="2_5sl4c"]
[ext_resource type="Script" path="res://scripts/managers/DeckConfigManager.gd" id="3_mi78j"]

[node name="DeckSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3noj5")
script = ExtResource("2_5sl4c")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0784314, 0.901961)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Select a Deck"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="DeckList" type="ItemList" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_search = false
auto_height = true

[node name="SelectButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Select Deck"

[node name="DeckConfigManager" type="Node" parent="."]
script = ExtResource("3_mi78j")
